--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ html{
   background-color: ivory;
 }
 
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0%;
+}
+
 .whole{
   background-color: ivory;
   height: 100%;
@@ -12,6 +18,7 @@ html{
 
 .header{
   color: #474935;
+  margin: 1%;
 } 
 
 .buttons {
@@ -50,7 +57,9 @@ html{
 }
 
 .purple {
-  
+  height: 100%;
+  width: 100%;
+  border: 1px black solid;
 }
 
 .red1 {
@@ -90,7 +99,9 @@ html{
 }
 
 .purple1 {
-  
+  height: 160px;
+  width: 160px;
+  border: black solid 2px;
 }
 
 * {box-sizing:border-box}
@@ -111,7 +122,7 @@ html{
   display: none;
 }
 
-/* Next & previous buttons */
+/* Next & previous buttons 
 .prejjv, .nxxext {
   cursor: pointer;
   position: absolute;
@@ -127,16 +138,16 @@ html{
   user-select: none;
 }
 
-/* Position the "next button" to the right */
+ Position the "next button" to the right 
 .nxxext {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
+ On hover, add a black background color with a little bit see-through 
 .prev:hover, .next:hover {
   background-color: rgba(0,0,0,0.8);
-}
+} */
 
 /* Caption text */
 .text {
@@ -158,7 +169,7 @@ html{
   top: 0;
 }
 
-/* The dots/bullets/indicators */
+/* The dots/bullets/indicators 
 .dot {
   cursor: pointer;
   height: 15px;
@@ -172,7 +183,7 @@ html{
 
 .active, .dot:hover {
   background-color: #717171;
-}
+} */
 
 /* Fading animation */
 .fade {
@@ -192,6 +203,11 @@ html{
 .Aboutme {
   width: 600px;
   text-align: left;
+}
+
+img{
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .p1 {
