--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .button:hover {
-  xbackground-color: cyan;
+  color: mediumblue;
 }
 
 .box {
@@ -35,6 +35,11 @@ body {
     max-width: 800px; 
     border: 1px solid black;
     padding: 5px;
+}
+
+.topright {
+  padding: .5%;
+  margin-left: .5%;
 }
 
 .red {
@@ -220,7 +225,7 @@ img{
   width: 130px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 400px) {
     .buttons {
         display: flex;
         flex-direction: column;
