--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ body {
   width: 400px;
   padding: 5px;
   margin: 2%;
-  text-align: left;
+  text-align: center;
 }
 
 .green1 {
@@ -201,9 +201,28 @@ body {
   
 }
 
-.Aboutme {
+.contact {
+  text-align: center;
+}
+
+.Aboutme1 {
   width: 600px;
-  text-align: left;
+  text-align: center;
+}
+
+.Aboutme2 {
+  width: 600px;
+  text-align: center;
+}
+
+.Aboutme3 {
+  width: 600px;
+  text-align: center;
+}
+
+.Aboutme4 {
+  width: 600px;
+  text-align: center;
 }
 
 img{
